<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.6</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.mdsql</groupId>
	<artifactId>mdsql</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>MDSQL</name>
	<description>MDSQL Application</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		
		<dependency>
			<groupId>com.mdval</groupId>
			<artifactId>mdcommon</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
		</dependency>

		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ucp</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.0.0</version>
		</dependency>

		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>2.11.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.any23</groupId>
			<artifactId>apache-any23-encoding</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>com.yworks</groupId>
		    <artifactId>yguard</artifactId>
		    <version>4.0.0</version>
		    <scope>compile</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.6.0.1398</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
    			<artifactId>maven-antrun-plugin</artifactId>
    			<executions>
        			<execution>
            			<phase>package</phase>
            			<goals>
                			<goal>run</goal>
            			</goals>
            			<id>obfuscate</id>
            			<configuration>
                			<tasks>
				                <property
				                	name="project.jar"
				                 	value="${project.build.directory}/${project.build.finalName}.jar"/>
			                	<property
			                 		name="project.jar.unobf"
			                 		value="${project.build.directory}/${project.build.finalName}_unobf.jar"/>
			                	<move
			                 		file="${project.jar}"
			                 		tofile="${project.jar.unobf}"
			                 		verbose="true"/>
			
			                	<property
			                 		name="runtime_classpath"
			                 		refid="maven.runtime.classpath"/>
			                	<taskdef
			                 		name="yguard"
			                 		classname="com.yworks.yguard.YGuardTask"
			                 		classpath="${runtime_classpath}"/>
			                	<yguard>
			                  		<inoutpair in="${project.jar.unobf}" out="${project.jar}" />
			
			                  		<rename logfile="${project.build.directory}/${project.build.finalName}_renamelog.xml">
			                    		<keep>
			                      			<method name="void main(java.lang.String[])" class="${mainclass}"/>
			                    		</keep>
			                  		</rename>
			                	</yguard>
			            	</tasks>
            			</configuration>
        			</execution>
    			</executions>
			</plugin>

		</plugins>
	</build>

</project>
